# mossx

./: .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  REMOTE_BACKEND_POC.md  components.json  findings.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  progress.md  skills-lock.json  task_plan.md  translations-additions-en.txt  translations-additions-zh.txt  ui-framework-guide.md  vite.config.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/en.lproj/: InfoPlist.strings
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: agents.rs  app_paths.rs  claude_commands.rs  claude_home.rs  client_storage.rs  code_intel.rs  command_registry.rs  diagnostics_bundle.rs  event_sink.rs  git_utils.rs  input_history.rs  lib.rs  linux_startup_guard.rs  local_usage.rs  main.rs  menu.rs  note_cards.rs  project_memory.rs  prompts.rs  remote_backend.rs  rules.rs  session_management.rs  session_management_tests.rs  shared_sessions.rs  skills.rs  startup_guard.rs  state.rs  storage.rs  terminal.rs  types.rs  utils.rs  window.rs
src-tauri/src/backend/: app_server.rs  app_server_cli.rs  app_server_event_helpers.rs  app_server_plan_enforcement.rs  app_server_runtime_lifecycle.rs  app_server_tests.rs  events.rs
src-tauri/src/codex/: args.rs  codex_tests.rs  collaboration_policy.rs  commit_message.rs  config.rs  home.rs  installer.rs  mod.rs  model_selection.rs  run_metadata.rs  session_runtime.rs  thread_listing.rs  thread_mode_state.rs
src-tauri/src/computer_use/: authorization_continuity.rs  broker.rs  computer_use_tests.rs  mod.rs  plist_helpers.rs  plugin_contract_tests.rs
src-tauri/src/dictation/: mod.rs  real.rs  stub.rs
src-tauri/src/engine/: claude.rs  claude_forwarder.rs  claude_history.rs  claude_history_delete_tests.rs  claude_history_entries.rs  claude_history_issue529_tests.rs  claude_history_large_payload.rs  claude_history_subagents.rs  (+21 more)
src-tauri/tests/: tauri_config.rs
(+2838 files in other folders)
